# sr25519-donna

./: .gitignore  CMakeLists.txt  README.org  doc.org
docs/: installation.org
example/: CMakeLists.txt  README.org
example/src/: main.c  print.c  print.h
src/: core.c  core.h  memzero.c  merlin.c  merlin.h  options.h  randombytes_sysrandom.c  randombytes_sysrandom.h  ristretto255.c  ristretto255.h  sha2.c  sha2.h  sha3.c  sha3.h  sr25519-donna.h  sr25519-hash-custom.h  sr25519-hash.h  sr25519-randombytes-custom.h  sr25519-randombytes-default.c  sr25519-randombytes-default.h  sr25519-randombytes.h  sr25519.c  sr25519.h  vrf.c  vrf.h
src/ed25519-donna/: curve25519-donna-32bit.c  ed25519-donna-impl-base.c  ed25519-donna-impl-base.h  ed25519-hash-custom.h  ed25519-randombytes-custom.h  ed25519.c  ed25519.h  modm-donna-32bit.c  modm-donna-32bit.h  modm-donna-64bit.h
src/randombytes/: core.c  core.h  randombytes.c  randombytes.h  randombytes_sysrandom.c  randombytes_sysrandom.h
tests/: test_check.c
